<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cadastroTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#8A00CC"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"/>

    <TextView
        android:id="@+id/nomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cadastroTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,LabelFor" />

    <TextView
        android:id="@+id/telefoneTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nomeEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/telefoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_12_93456_7890"
        android:textColorHint="@android:color/darker_gray"
        android:minHeight="48dp"
        android:autofillHints="phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/telefoneTv"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/telefoneEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="@+id/emailTv"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/emailCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingressar_na_lista_de_e_mails"
        app:layout_constraintTop_toBottomOf="@id/emailEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sexoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/emailCb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/sexo_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sexoTv">

        <RadioButton
            android:id="@+id/masculinoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/femininoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

    </RadioGroup>

    <TextView
        android:id="@+id/cidadeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/sexo_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/cidadeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="city"
        android:hint="@string/digite_sua_cidade"
        android:minHeight="48dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/cidadeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/ufTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/cidadeEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/uf_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/estados_brasil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ufTv"/>

    <LinearLayout
        android:id="@+id/botoesLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/uf_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/limparBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            style="?android:attr/borderlessButtonStyle"
            android:background="#8A00CC"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            style="?android:attr/borderlessButtonStyle"
            android:background="#8A00CC"
            android:textColor="@color/white"
            android:layout_weight="1"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>